apps/home/mosquitto/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: mosquitto
spec: {}
status: {}
