apps/home/mosquitto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.0.21
          ports:
            - containerPort: 8883
            - containerPort: 9001
          volumeMounts:
            - mountPath: /mosquitto/config/
              name: config
            - mountPath: /mosquitto/data/
              name: data
      volumes:
        - name: config
          configMap:
            name: mosquitto-config
        - name: data
          persistentVolumeClaim:
            claimName: mosquitto-data
