apps/home/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
    - port: 8883
      name: http
