apps/home/mosquitto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  namespace: mosquitto
  annotations:
    spec.ingressClassName: traefik

spec:
  rules:
    - http:
        paths:
          - path: /mqtt
            pathType: Prefix
            backend:
              service:
                name: mosquitto
                port:
                  name: http
